[gd_scene load_steps=6 format=3 uid="uid://dvlama7ppwmh8"]

[ext_resource type="PackedScene" uid="uid://oxd6j1o3j2yi" path="res://components/alert_panel.tscn" id="1_e7kns"]
[ext_resource type="Script" uid="uid://unlx6ej7qfdy" path="res://scenes/test_scene_0.gd" id="1_lj2is"]
[ext_resource type="PackedScene" uid="uid://2sa4h7eyvuub" path="res://components/profiling_panel.tscn" id="3_egpak"]
[ext_resource type="Script" uid="uid://bbv2l8clh3f46" path="res://components/typed_text.gd" id="4_8o18j"]
[ext_resource type="Script" uid="uid://cdvgsypmhskl1" path="res://components/plot.gd" id="5_eyerf"]

[node name="TestScene0" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lj2is")

[node name="AlertPanel" parent="." instance=ExtResource("1_e7kns")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -300.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 324.0
offset_bottom = 116.0
text = "Press \"Up\" to log info
Press \"Right\" to log warning
Press \"Down\" to log error
Press \"F1\" to show debug info"

[node name="ProfilingPanel" parent="." instance=ExtResource("3_egpak")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -100.0
offset_bottom = 100.0
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 375.0
offset_right = 502.0
offset_bottom = 624.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextSpeedSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 50.0
tick_count = 11
ticks_on_borders = true

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TypedText" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_8o18j")
metadata/_custom_type_script = "uid://bbv2l8clh3f46"

[node name="PlotPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -500.0
offset_bottom = 64.0
grow_horizontal = 0

[node name="Plot" type="Line2D" parent="PlotPanel"]
width = 1.0
default_color = Color(0, 1, 1, 1)
joint_mode = 2
antialiased = true
script = ExtResource("5_eyerf")
max_value = 0.1
points_count = 60
metadata/_custom_type_script = "uid://cdvgsypmhskl1"

[node name="Label" type="Label" parent="PlotPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 124.0
offset_bottom = 33.0
text = "TIME_PROCESS"

[node name="PlotTimer" type="Timer" parent="."]
autostart = true

[connection signal="drag_ended" from="Panel/MarginContainer/VBoxContainer/TextSpeedSlider" to="." method="_on_text_speed_slider_drag_ended"]
[connection signal="timeout" from="PlotTimer" to="." method="_on_plot_timer_timeout"]
